# pydanticmongo

./: .gitignore  README.md  demo.py  setup.cfg
.github/workflows/: python-publish.yml
pydanticmongo/: __init__.py  basemodel.py  idfield.py  idfieldinfo.py  idhandler.py
src/: mongo_base_model.py  mongo_id_field.py  mongo_id_field_info.py  simple.py
