[metadata]
name = pydanticmongo
version = 1.0.0
author = Nuri H
author_email = 1554735+nurih@users.noreply.github.com
description = Tools for using pydantic models and more readily store them as MongoDB documents
long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/nurih/pydanticmongo
project_urls =
    Bug Tracker = https://github.com/nurih/pydanticmongo/-/issues
    repository = https://github.com/nurih/pydanticmongo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pydanticmongo
packages = find:
python_requires = >=3.10

[options.packages.find]
where = pydanticmongo